--- a/source/form.html
+++ b/source/form.html
@@ -100,7 +100,7 @@
             </div>
           </div>
           <div class="form__fieldset form__fieldset--text">
-            <h2 class="form__legend form__legend--text">ФИО</h2>
+            <h2 class="form__legend form__legend--text form__legend--initials">ФИО</h2>
             <ul class="form__initials">
               <li class="form__contacts form__contacts--item">
                 <label class="form__label form__label--text" for="fname">Имя:</label>
@@ -140,7 +140,7 @@
             <div class="form__textarea">
               <h2 class="form__field form__field--textarea">Доп</h2>
               <label class="form__label form__label--textarea" for="add"></label>
-              <textarea class="form__textarea form__textarea--text" id="add" name="add" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              <textarea class="form__text-form" id="add" name="add" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </div>
           </div>
           <div class="form__filling">
